platform/kyverno/policies/disallow-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  validationFailureAction: enforce
  background: true

  rules:
    - name: block-privileged
      match:
        resources:
          kinds:
            - Pod
          namespaces:
            - dev
            - qa
            - prod
      exclude:
        resources:
          namespaces:
            - kube-system
            - kube-public
            - kube-node-lease
            - argocd
            - kyverno
            - ingress-nginx
            - cert-manager
            - monitoring       

      validate:
        message: "Privileged containers are not allowed"

        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false

            =(initContainers):
              - securityContext:
                  privileged: false
