platform/kyverno/policies/namespace-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-namespaces
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: only-allowed-namespaces
      match:
        resources:
          kinds:
            - Pod
          namespaces:
            - dev   # ✅ apply ONLY to dev
            - qa
            - prod 
      exclude:
        resources:
          namespaces:
            - kube-system
            - kube-public
            - kube-node-lease
            - argocd
            - kyverno
            - ingress-nginx
            - cert-manager
            - monitoring       
            
      validate:
        message: "Deployment allowed only in dev, qa, prod namespaces"
        pattern:
          metadata:
            namespace: "dev|qa|prod|argocd|kube-system|kyverno"
